@@ -71,6 +71,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|antlr
@@ -152,6 +162,24 @@ operator|.
 name|conf
 operator|.
 name|HiveConf
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
+name|metastore
+operator|.
+name|api
+operator|.
+name|FieldSchema
 import|;
 end_import
 
@@ -1139,6 +1167,70 @@ operator|.
 name|getDataLocation
 argument_list|()
 decl_stmt|;
+name|List
+argument_list|<
+name|FieldSchema
+argument_list|>
+name|parts
+init|=
+name|ts
+operator|.
+name|tableHandle
+operator|.
+name|getTTable
+argument_list|()
+operator|.
+name|getPartitionKeys
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|isOverWrite
+operator|&&
+operator|(
+name|parts
+operator|!=
+literal|null
+operator|&&
+name|parts
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+operator|)
+operator|&&
+operator|(
+name|ts
+operator|.
+name|partSpec
+operator|==
+literal|null
+operator|||
+name|ts
+operator|.
+name|partSpec
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
+operator|)
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|NEED_PARTITION_ERROR
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
 comment|// make sure the arguments make sense
 name|applyConstraints
 argument_list|(
