@@ -15139,6 +15139,48 @@ argument_list|(
 name|dest
 argument_list|)
 expr_stmt|;
+comment|//check for partition
+name|List
+argument_list|<
+name|FieldSchema
+argument_list|>
+name|parts
+init|=
+name|dest_tab
+operator|.
+name|getTTable
+argument_list|()
+operator|.
+name|getPartitionKeys
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|parts
+operator|!=
+literal|null
+operator|&&
+name|parts
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|NEED_PARTITION_ERROR
+operator|.
+name|getMsg
+argument_list|()
+argument_list|)
+throw|;
+block|}
 name|dest_path
 operator|=
 name|dest_tab
